kubernetes-manifests/service.yaml
# This Service manifest defines:
# - a load balancer for pods matching label "app: python-hello-world"
# - exposing the application to the public Internet (type:LoadBalancer)
# - routes port 80 of the load balancer to the port 8080 of the Pods.
# Syntax reference https://kubernetes.io/docs/concepts/configuration/overview/
apiVersion: v1
kind: Service
metadata:
  name: smash-service
spec:
  type: NodePort
  selector:
    app: smash-service
  ports:
    - name: web
      port: 8000
      type: NodePort
    # - port: 3000
    #   targetPort: 8080
    #   nodePort: 5000
      
      # targetPort: 80
