kubernetes-manifests/ingress.yaml
apiVersion:extensions/v1beta1
kind: Ingress
metadata:
  name: traffic-router
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
          serviceName: smash-service
          servicePort: web
